--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,12 @@ section#telefone{
     background-image: url(../imagens/iphone-02.png);
     background-repeat: no-repeat;
 }
+
+iframe#tela{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -49.5%);
+    width: 200px;
+    height: 400px;
+}
