--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,11 +22,16 @@ body{
     background-position: top center;
     background-attachment: fixed;
 }
-
-main{ /* ALINHAR NO CENTRO DA TELA (Próximas 3 linhas)*/
+/* ALINHAR NO CENTRO DA TELA (Próximas 3 linhas)
+main{  
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+}*/
+
+main {
+    position: relative;
     height: 100vh;
 }
 
@@ -35,6 +40,10 @@ section#telefone{
     width: 140px;
     background-image: url(../imagens/iphone-02.png);
     background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 iframe#tela{
@@ -44,4 +53,23 @@ iframe#tela{
     transform: translate(-50%, -49.5%);
     width: 200px;
     height: 400px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37);
+    box-sizing: border-box; /* A borda de baixo, agora faz parte e a figura não se mexe*/
+}
+
+section#redes-sociais img:hover{ /* Quando passar o mouse por cima */
+    border: 2px solid rgba(255, 255, 255, 0.651);
+    transform: translate(-3px, -3px); /* Vai mexer */
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.397);
+    
 }
